log
Thu 28 Mar 2024 12:35:52 AM UTC: 
 tests:  0|6
total_score: 0/70
dc461d7
Thu 28 Mar 2024 12:40:34 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f037006
Fri 29 Mar 2024 04:12:28 PM UTC: 
 list.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:3: error: unknown type name ‘node’; did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |   ^~~~
      |   Node
list.c:24:17: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                 ^~~~
      |                 Node
list.c:24:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:24:22: error: expected expression before ‘)’ token
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                      ^
list.c:26:7: error: request for member ‘data’ in something not a structure or union
   26 |   nodo->data = data;
      |       ^~
list.c:27:7: error: request for member ‘next’ in something not a structure or union
   27 |   nodo->next = NULL;
      |       ^~
list.c:28:7: error: request for member ‘prev’ in something not a structure or union
   28 |   nodo->prev = NULL;
      |       ^~
list.c:29:10: error: returning ‘int *’ from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
   29 |   return nodo;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
10e9c5e
Fri 29 Mar 2024 04:48:12 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:3: error: unknown type name ‘node’; did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |   ^~~~
      |   Node
list.c:24:17: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                 ^~~~
      |                 Node
list.c:24:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:24:22: error: expected expression before ‘)’ token
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                      ^
list.c:26:7: error: request for member ‘data’ in something not a structure or union
   26 |   nodo->data = data;
      |       ^~
list.c:27:7: error: request for member ‘next’ in something not a structure or union
   27 |   nodo->next = NULL;
      |       ^~
list.c:28:7: error: request for member ‘prev’ in something not a structure or union
   28 |   nodo->prev = NULL;
      |       ^~
list.c:29:10: error: returning ‘int *’ from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
   29 |   return nodo;
      |          ^~~~
list.c: In function ‘createList’:
list.c:34:3: error: unknown type name ‘list’; did you mean ‘List’?
   34 |   list* lista = (list*) malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:34:18: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |   list* lista = (list*) malloc(sizeof(list));
      |                  ^~~~
      |                  List
list.c:34:23: error: expected expression before ‘)’ token
   34 |   list* lista = (list*) malloc(sizeof(list));
      |                       ^
list.c:36:8: error: request for member ‘head’ in something not a structure or union
   36 |   lista->head = NULL;
      |        ^~
list.c:37:8: error: request for member ‘tail’ in something not a structure or union
   37 |   lista->tail = NULL;
      |        ^~
list.c:38:8: error: request for member ‘current’ in something not a structure or union
   38 |   lista->current = NULL;
      |        ^~
list.c:39:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   39 |   return lista;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
370738b
Fri 29 Mar 2024 04:53:17 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:3: error: unknown type name ‘node’; did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |   ^~~~
      |   Node
list.c:24:17: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                 ^~~~
      |                 Node
list.c:24:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:24:22: error: expected expression before ‘)’ token
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                      ^
list.c:27:7: error: request for member ‘data’ in something not a structure or union
   27 |   nodo->data = data;
      |       ^~
list.c:28:7: error: request for member ‘next’ in something not a structure or union
   28 |   nodo->next = NULL;
      |       ^~
list.c:29:7: error: request for member ‘prev’ in something not a structure or union
   29 |   nodo->prev = NULL;
      |       ^~
list.c:30:10: error: returning ‘int *’ from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
   30 |   return nodo;
      |          ^~~~
list.c: In function ‘createList’:
list.c:35:3: error: unknown type name ‘list’; did you mean ‘List’?
   35 |   list* lista = (list*) malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:35:18: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   35 |   list* lista = (list*) malloc(sizeof(list));
      |                  ^~~~
      |                  List
list.c:35:23: error: expected expression before ‘)’ token
   35 |   list* lista = (list*) malloc(sizeof(list));
      |                       ^
list.c:38:8: error: request for member ‘head’ in something not a structure or union
   38 |   lista->head = NULL;
      |        ^~
list.c:39:8: error: request for member ‘tail’ in something not a structure or union
   39 |   lista->tail = NULL;
      |        ^~
list.c:40:8: error: request for member ‘current’ in something not a structure or union
   40 |   lista->current = NULL;
      |        ^~
list.c:41:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   41 |   return lista;
      |          ^~~~~
list.c: In function ‘firstList’:
list.c:47:41: error: ‘Node’ has no member named ‘key’
   47 |   if(list->current) return list->current->key
      |                                         ^~
list.c:47:46: error: expected ‘;’ before ‘}’ token
   47 |   if(list->current) return list->current->key
      |                                              ^
      |                                              ;
   48 | }
      | ~                                             
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
080b97b
